--- a/php_project/paylastikca-proje1/css/style.css
+++ b/php_project/paylastikca-proje1/css/style.css
@@ -254,6 +254,7 @@ background: url("../img/iletisim.jpg");
 }
 textarea{
   font-family: Arial;
+  resize: none !important;
 }
 input[type="submit"]{
   cursor: pointer;
